<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/captureView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <RelativeLayout
        android:id="@+id/navigation_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@null"
            android:text="@string/crop_back"
            android:textColor="@color/cardview_light_background">

        </Button>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:text="@string/crop_use"
            android:textColor="@color/cardview_light_background">

        </Button>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/imageLayout"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_below="@+id/navigation_layout"
        android:background="#000000">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></ImageView>

        <com.example.ocrlibrary.Helper.GraphicOverlay
            android:id="@+id/graphic_overlay"
            layout_constraintBottom_toBottomOf="@id/imageView"
            layout_constraintLeft_toLeftOf="@id/imageView"
            layout_constraintRight_toRightOf="@id/imageView"
            layout_constraintTop_toTopOf="@id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </com.example.ocrlibrary.Helper.GraphicOverlay>
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:text="@string/highlight_text"
        android:layout_above="@+id/buttons"
        android:layout_centerHorizontal="true">
    </TextView>



    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/retake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:backgroundTint="#000000"
            android:text="@string/highlight_retake"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF"></Button>

    </RelativeLayout>

    <TextView
        android:id="@+id/resultView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#000000"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/cardview_light_background"
        android:textSize="20dp"></TextView>

</RelativeLayout>